navigating router back using location.back()

--- a/src/app/main/sidebar/tr-details/tr-details.component.html
+++ b/src/app/main/sidebar/tr-details/tr-details.component.html
@@ -6,6 +6,8 @@
       <img src="assets/icons/delete-icon.png" alt="delete icon" (click)="deleteTransaction()">
       <img src="assets/icons/close-icon.png" alt="close icon" (click)="onCancel()">
     </div>
+    <!-- <img [src]="transaction.income?'assets/icons/income.png':'assets/icons/expense.png'" alt="money flow icon" style="max-height: 30px;">
+                <p class="moneyFlow">{{transaction.income?'Income':'Expense'}}</p> -->
   </div>
 
   <div class="finalBtns">
