fixed api service, adding router navigation toFunc

--- a/src/app/main/sidebar/tr-details/tr-details.component.html
+++ b/src/app/main/sidebar/tr-details/tr-details.component.html
@@ -9,7 +9,9 @@
     <!-- <img [src]="transaction.income?'assets/icons/income.png':'assets/icons/expense.png'" alt="money flow icon" style="max-height: 30px;">
                 <p class="moneyFlow">{{transaction.income?'Income':'Expense'}}</p> -->
   </div>
-
+  <h3>Payment Date:</h3>
+  <h3>Description</h3>
+  
   <div class="finalBtns">
     <button type="reset" class="cancel btn" (click)="onCancel()">
       Close
