Details comp designed/Download funct implemented

--- a/src/app/main/main-center/main-center.component.html
+++ b/src/app/main/main-center/main-center.component.html
@@ -22,7 +22,7 @@
           <div class="trBox" >
             <!-- 'tr' is shortcut for transaction -->
             <div class="trCategory">
-              <p>{{ transaction.categoryType}}</p>
+              <p>{{ transaction.categoryType[0]}}</p>
             </div>
             <div class="trRest">
               <p class="trTitle">{{transaction.title}}</p>
