--- a/src/app/main/sidebar/tr-details/tr-details.component.css
+++ b/src/app/main/sidebar/tr-details/tr-details.component.css
@@ -152,3 +152,6 @@
   margin-left: 11px;
   font-size: 20px;
 }
+.custom-dialog-container {
+  width: 400px; /* Set the width as per your requirement */
+}
