--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,10 +8,7 @@
   </div>
 
   <div class="right-bar">
-    <div>
-      <h6>{{userEmail}}</h6>
-      <button (click)="logOut()">Logout</button>
-    </div>
+    <app-right-bar></app-right-bar>
   </div>
 </div>
 <div class="tr-edit">
