styled userInfo and logout elements

--- a/src/app/main/right-bar/right-bar.component.html
+++ b/src/app/main/right-bar/right-bar.component.html
@@ -1,4 +1,5 @@
-<div>
+<div id="userInfo">
+  <img src="assets/icons/userIcon.png" alt="userIcon" width="24px">
   <h6>{{userEmail}}</h6>
-  <button (click)="logOut()">Logout</button>
 </div>
+<button class="logOut" (click)="logOut()">Logout</button>
