--- a/src/app/main/main-center/main-center.component.html
+++ b/src/app/main/main-center/main-center.component.html
@@ -8,7 +8,7 @@
   </div>
   <div id="search">
     <img src="assets/icons/search.png" alt="searchIcon">
-    <input type="text" placeholder="Search" #filter>
+    <input type="text" placeholder="Search" [(ngModel)]="searchTerm">
   </div>
   <div id="data" [ngSwitch]="selected">
     <div *ngSwitchCase="'Categories'"><app-sec-categories></app-sec-categories></div>
@@ -18,7 +18,7 @@
     <div *ngSwitchCase="'Admin'"><app-sec-admin></app-sec-admin></div>
     <div *ngSwitchDefault>
       <ul>
-        <li class="transactions" *ngFor="let transaction of transactions$ | async; let i=index" (click)="onDetailsTransaction(transaction.id)">
+        <li class="transactions" *ngFor="let transaction of (transactions$ | async) | search: searchTerm; let i=index" (click)="onDetailsTransaction(transaction.id)">
           <div class="trBox" >
             <!-- 'tr' is shortcut for transaction -->
             <div class="trCategory">
