--- a/src/app/main/right-bar/right-bar.component.css
+++ b/src/app/main/right-bar/right-bar.component.css
@@ -14,4 +14,24 @@
   margin-left: 32px;
   text-decoration: underline;
 }
-
+#incomeAndExpenseFilter{
+  margin: 30px 0;
+}
+.incomeAndExpense{
+  display: flex;
+  align-items: center;
+  width: 235px;
+  height: 49px;
+  background-color: #F9F9F9;
+  border-radius: 10px;
+  margin-bottom: 16px;
+}
+.incomeAndExpense img{
+  margin-right: 7px;
+  width: 35px;
+  margin-left: 11px;
+}
+.incomeAndExpense p{
+  font-size: 20px;
+  color:#373737;
+}
